src/tvision4c/Rect.h

#pragma once

#include "common.h"
#include "Point.h"

#define Uses_TRect
#include <tvision/tv.h>

EXPORT tv::Error TV_Rect_new(TRect** out);
EXPORT tv::Error TV_Rect_new2(int32_t ax, int32_t ay, int32_t bx, int32_t by, TRect** out);
EXPORT tv::Error TV_Rect_new3(TPoint* p1, TPoint* p2, TRect** out);
EXPORT tv::Error TV_Rect_delete(TRect* self);
EXPORT tv::Error TV_Rect_equals(TRect* self, TRect* other, BOOL* out);
EXPORT tv::Error TV_Rect_hash(TRect* self, int32_t* out);
EXPORT tv::Error TV_Rect_move(TRect* self, int32_t aDX, int32_t aDY);
EXPORT tv::Error TV_Rect_grow(TRect* self, int32_t aDX, int32_t aDY);
EXPORT tv::Error TV_Rect_intersect(TRect* self, TRect* r);
EXPORT tv::Error TV_Rect_Union(TRect* self, TRect* r);
EXPORT tv::Error TV_Rect_contains(TRect* self, TPoint* p, BOOL* out);
EXPORT tv::Error TV_Rect_isEmpty(TRect* self, BOOL* out);
EXPORT tv::Error TV_Rect_get_a(TRect* self, TPoint** out);
EXPORT tv::Error TV_Rect_get_b(TRect* self, TPoint** out);
EXPORT tv::Error TV_Rect_set_a(TRect* self, TPoint* p);
EXPORT tv::Error TV_Rect_set_b(TRect* self, TPoint* p);